# polymarketmock

./: .dockerignore  .gitignore  README.md  _diag_batch.py  _diag_entry.py  docker-compose-redis-only.yml  docker-compose-redis.yml  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  _check_archive.py  _diag_archive.py  _diag_gap.py  _diag_parquet.py  _health.py  _test_data.py  _test_timeline.py  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: backtest.py  market.py  trading.py
backend/app/routers/: account.py  backtest.py  markets.py  monitor.py  trading.py  ws.py
backend/app/services/: auto_recorder.py  backtest_engine.py  event_lifecycle.py  event_registry.py  log_buffer.py  matching_engine.py  polymarket_proxy.py  position_manager.py  settlement.py  trade_feed.py  ws_manager.py
backend/app/storage/: data_collector.py  duckdb_store.py  redis_store.py
backend/app/utils/: price_impact.py
backend/data/: sessions.jsonl  token_map.json
backend/data/archives/btc-updown-15m-1774429200/: live_trades.parquet  orderbooks.parquet  prices.parquet  trades.parquet
backend/data/archives/btc-updown-15m-1774430100/: live_trades.parquet  orderbooks.parquet  prices.parquet  trades.parquet
backend/data/archives/btc-updown-15m-1774502100/: live_trades.parquet
backend/data/archives/btc-updown-15m-1774503000/: live_trades.parquet  orderbooks.parquet  prices.parquet
backend/data/archives/btc-updown-15m-1774503900/: live_trades.parquet
backend/data/sessions/: .gitignore
(+1882 files in other folders)
